# crimson-arb-vault

./: Anchor.toml  BACKEND_TASKS.md  CBhandoff.md  PRIVY_HUMAN_TASKS.md  middleware.ts  package-lock.json  package.json  tsconfig.json
app/: globals.css  layout.tsx  manifest.ts  page.tsx  robots.ts  sitemap.ts
app/about/: page.tsx
app/analytics/: page.tsx
app/blog/: page.tsx
app/chaos-demo/: page.tsx
app/docs/: page.tsx
components/: agent-sentry-status.tsx  approval-queue.tsx  audit-trail-drawer.tsx  chaos-demo.tsx  depth-chart.tsx  dev-control-panel.tsx  drift-attack-replay.tsx  execution-success-toast.tsx  geo-selector.tsx  institutional-metrics.tsx  investor-transparency-report.tsx  jobu-ritual-overlay.tsx  jobu-supply-monitor.tsx  liquidity-heatmap.tsx  live-simulation-v2.tsx  live-simulation.tsx  onboarding-modal.tsx  sentry-brain-report.tsx  sentry-brain.tsx  sentry-decision-matrix.tsx  site-footer.tsx  site-header.tsx  structured-data.tsx  webacy-badge.tsx  why-we-skip.tsx
contexts/: auth-context.tsx
hooks/: use-vault-metrics.ts
lib/: ai-decision-logger.ts  ai-reasoning.ts  atsp-schema.ts  auth-config.ts  config.ts  seo-config.ts  simulation-engine.ts  solana-config.ts  transaction.ts  use-auth.ts  use-geo.ts  vault-constants.ts  wallet-client.ts  webacy.ts
programs/: package.json
programs/crimson-vault/: Cargo.toml
programs/crimson-vault/src/: lib.rs
programs/ctoken-market-program/: Cargo.toml
programs/ctoken-market-program/src/: lib.rs
programs/custom-adaptor-program/: Cargo.toml
programs/custom-adaptor-program/src/: lib.rs
public/: llms.txt
scripts/: 001-initial-schema.sql  015-webacy-columns.sql  create-founders-waitlist.sql  seed-ai-decisions.ts
tests/: custom-adaptor-program.ts
(+63 files in other folders)
