[package]
name = "crimson-vault"
version = "0.1.0"
description = "CrimsonArb Vault - Delta-neutral arbitrage vault on Drift Protocol"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "crimson_vault"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
solana-program = "2.1"

[dev-dependencies]
anchor-client = "0.31.1"
